--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 EMAIL_SENDER=jhadivyansh29@gmail.com
-EMAIL_PASSWORD=usjy mtgl jrip nfzw
+EMAIL_PASSWORD=ooqx kxug dggr wqyn
 EMAIL_RECEIVER=500091657@stu.upes.ac.in
