--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 EMAIL_SENDER=jhadivyansh29@gmail.com
-EMAIL_PASSWORD=ooqx kxug dggr wqyn
+EMAIL_PASSWORD=oqx kxug dggr wqyn
 EMAIL_RECEIVER=jhadivyansh29@gmail.com
